# syugcs_user-interfaces_cwk3

codebase/: CMakeLists.txt  README.md  main.cpp  run.sh
codebase/qtApp/: compliance.cpp  compliance.hpp  dashboard.hpp  datapage.cpp  datapage.hpp  enviroment-litter.cpp  persistent-pollutants.cpp  pollutant-overview.cpp  pollutant-overview.hpp  stats.cpp
cwk-info/: syugcs_user-interfaces_cwk.odt
documentation/: .~lock.syugcs_user-interfaces_cwk3-eval-user-feedback.docx#  Participant Information Sheet.docx  Preliminary Design Doc UI.docx  syugcs_user-interfaces_cwk3-eval-user-feedback.docx
src/: CMakeLists.txt  dashboard.cpp  dashboard.hpp  hydromodel.cpp  hydromodel.hpp  hydroset.cpp  hydroset.hpp  main.cpp  pollutant.cpp  pollutant.hpp  run.sh  stats.cpp  stats.hpp  waterbody.cpp  waterbody.hpp  window.cpp  window.hpp
src/data/: .~lock.Y-2024.csv#
src/hydromodel/: hydromodel.cpp  hydromodel.hpp  hydroset.cpp  hydroset.hpp
src/qtApp/: compliance.cpp  compliance.hpp  dashboard.cpp  dashboard.hpp  datapage.cpp  datapage.hpp  enviroment-litter.cpp  enviroment-litter.hpp  litter.cpp  litter.hpp  persistent-pollutants.cpp  persistent-pollutants.hpp  pollutant-overview.cpp  pollutant-overview.hpp  pollutant.cpp  pollutant.hpp  window.cpp  window.hpp
